CSS Fixes:  Fixed spacing between li elements in text content to apply to ol>li as well as ul>li.  Added a new class to specify narrower image thumbnails in content.

--- a/devCSS/showcase.scss
+++ b/devCSS/showcase.scss
@@ -198,7 +198,7 @@ body {
 		margin-top:10px;
 		margin-bottom:0px;
 		
-		ul li {
+		ul li, ol li {
 			margin-bottom:10px;
 		}
 		
@@ -887,6 +887,11 @@ a {
 	.thumb_left & img {
 		max-width:150px;
 	}
+	
+	.thumb_120 & img {
+		max-width:120px !important;
+	}
+	
 }
 
 .infobox_right, .infobox_left { 
